force-app/main/default/objects/Account/fields/Department_Recid__c.field-meta.xml
<CustomField>
    <fullName>Department_Recid__c</fullName>
    <externalId>true</externalId>
    <label>Forrester Department Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>