force-app/main/default/objects/Account/fields/Institution_Recid__c.field-meta.xml
<CustomField>
    <fullName>Institution_Recid__c</fullName>
    <externalId>true</externalId>
    <label>Forrester Institution Record ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>