force-app/main/default/objects/Account/fields/Is_Special_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Is_Special_Affiliate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Special Affiliate</label>
    <type>Checkbox</type>
</CustomField>