force-app/main/default/objects/Account/fields/Org_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_Unit_ID__c</fullName>
    <label>Org Unit ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>