force-app/main/default/objects/Account/fields/OSP__c.field-meta.xml
<CustomField>
    <fullName>OSP__c</fullName>
    <label>OSP #</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>