force-app/main/default/objects/Account/fields/OSP_Number__c.field-meta.xml
<CustomField>
    <fullName>OSP_Number__c</fullName>
    <label>OSP Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>