force-app/main/default/objects/Account/fields/SAP_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Vendor_ID__c</fullName>
    <externalId>true</externalId>
    <label>SAP Sponsor Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>