force-app/main/default/objects/Account/fields/Sponsor_ID__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_ID__c</fullName>
    <label>Sponsor ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>