force-app/main/default/objects/Account/fields/Sponsor_Number__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Number__c</fullName>
    <label>Sponsor Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>