force-app/main/default/objects/Account/fields/Sponsor_Recid__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Recid__c</fullName>
    <externalId>true</externalId>
    <label>Forrester Sponsor Record ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>