force-app/main/default/objects/Account/recordTypes/KC_Sponsor.recordType-meta.xml
<RecordType>
    <fullName>KC_Sponsor</fullName>
    <active>true</active>
    <label>Sponsor, KC</label>
</RecordType>