force-app/main/default/objects/Account/recordTypes/Law_Office.recordType-meta.xml
<RecordType>
    <fullName>Law_Office</fullName>
    <active>true</active>
    <label>Law Firm</label>
</RecordType>