force-app/main/default/objects/Account/recordTypes/MIT_Inventor.recordType-meta.xml
<RecordType>
    <fullName>MIT_Inventor</fullName>
    <active>true</active>
    <label>MIT Inventor</label>
</RecordType>