force-app/main/default/objects/Account/recordTypes/Non_KC_Sponsor.recordType-meta.xml
<RecordType>
    <fullName>Non_KC_Sponsor</fullName>
    <active>true</active>
    <label>Sponsor, Non-KC</label>
</RecordType>