force-app/main/default/objects/Account/validationRules/OnlyNumbers.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyNumbers</fullName>
    <active>true</active>
    <description>Phone field must only contain numerical values and +
No spaces or a minus -</description>
    <errorConditionFormula>AND(!ISBLANK(Phone), !ISNUMBER(Phone))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please only enter numbers</errorMessage>
</ValidationRule>