force-app/main/default/objects/Account/listViews/Departments.listView-meta.xml
<ListView>
    <fullName>Departments</fullName>
    <columns>Org_Unit_ID__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>Is_Special_Affiliate__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Department</value>
    </filters>
    <label>Departments</label>
</ListView>