force-app/main/default/objects/Account/listViews/Law_Offices.listView-meta.xml
<ListView>
    <fullName>Law_Offices</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Law_Office</value>
    </filters>
    <label>Law Firms</label>
</ListView>