force-app/main/default/objects/Account/listViews/Organizations.listView-meta.xml
<ListView>
    <fullName>Organizations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Organization</value>
    </filters>
    <label>Organizations</label>
</ListView>