force-app/main/default/objects/Account/listViews/Sponsors.listView-meta.xml
<ListView>
    <fullName>Sponsors</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>OSP_Number__c</columns>
    <columns>Sponsor_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.KC_Sponsor,Account.Non_KC_Sponsor</value>
    </filters>
    <label>Sponsors</label>
</ListView>